--- a/index.html
+++ b/index.html
@@ -5,12 +5,11 @@
         <script src="https://cdn.tailwindcss.com"></script>
         <script src="https://unpkg.com/htmx.org@1.9.6"></script>
         <style>
-            /* Additional styling to center content and manage widths */
             .centered-content {
-                max-width: 800px; /* Set a max-width for the content */
+                max-width: 800px;
                 margin-left: auto;
                 margin-right: auto;
-                padding: 10px; /* Add some padding around the content */
+                padding: 10px;
             }
         </style>
     </head>
@@ -19,15 +18,138 @@
             <h1 class="text-3xl font-bold text-center mb-4">
                 Fortis Colosseum Splits
             </h1>
-            <div>
-                <button
-                    class="centered-content flex justify-between"
-                    hx-get="/splits"
-                    hx-swap="outerHTML"
+            <div class="flex flex-col items-center py-4 space-y-4">
+                <div
+                    class="w-full max-w-lg p-20 border-dashed border rounded-lg border-gray-400 flex flex-col items-center gap-4 text-gray-500"
+                    id="drop-zone"
+                    ondrop="dropHandler(event);"
+                    ondragover="dragOverHandler(event);"
                 >
-                    Click Me
-                </button>
+                    <p class="font-semibold text-center">
+                        Drag and drop your splits folder from runelite
+                    </p>
+                    <p class="text-sm">or</p>
+                    <button
+                        class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium border border-input bg-background hover:bg-accent hover:scale-105 hover:text-accent-foreground h-10 px-4 py-2"
+                        id="folderSelectButton"
+                    >
+                        Select Folder
+                    </button>
+                    <input
+                        id="folderInput"
+                        type="file"
+                        webkitdirectory
+                        mozdirectory
+                        msdirectory
+                        odirectory
+                        directory
+                        multiple
+                        style="display: none"
+                        onchange="fileSelectHandler(this.files)"
+                        hx-get="/splits"
+                        hx-target="#drop-zone"
+                        hx-swap="outerHTML"
+                    />
+                </div>
             </div>
         </div>
+        <script>
+            document
+                .getElementById("folderSelectButton")
+                .addEventListener("click", function () {
+                    document.getElementById("folderInput").click();
+                });
+
+            function dragOverHandler(ev) {
+                ev.preventDefault();
+            }
+
+            function dropHandler(ev) {
+                ev.preventDefault();
+                if (ev.dataTransfer.items) {
+                    const items = Array.from(ev.dataTransfer.items);
+                    const allFiles = [];
+                    Promise.all(
+                        items.map((item) => {
+                            const entry = item.webkitGetAsEntry();
+                            if (entry) {
+                                return handleEntry(entry, allFiles);
+                            }
+                            return Promise.resolve();
+                        }),
+                    )
+                        .then(() => {
+                            if (allFiles.length > 0) {
+                                htmx.ajax("GET", "/splits", {
+                                    target: "#drop-zone",
+                                    swap: "outerHTML",
+                                });
+                                processFiles(allFiles);
+                            } else {
+                                console.error("No files found in the drop.");
+                            }
+                        })
+                        .catch(handleError);
+                }
+            }
+
+            function handleEntry(entry, allFiles) {
+                if (entry.isFile) {
+                    return new Promise((resolve) => {
+                        entry.file((file) => {
+                            allFiles.push(file);
+                            resolve();
+                        });
+                    });
+                } else if (entry.isDirectory) {
+                    return traverseDirectory(entry, allFiles);
+                }
+            }
+
+            function traverseDirectory(entry, allFiles) {
+                const reader = entry.createReader();
+                return new Promise((resolve, reject) => {
+                    const readEntries = () => {
+                        reader.readEntries((entries) => {
+                            if (entries.length > 0) {
+                                Promise.all(
+                                    entries.map((entry) =>
+                                        handleEntry(entry, allFiles),
+                                    ),
+                                )
+                                    .then(readEntries)
+                                    .catch(reject);
+                            } else {
+                                resolve();
+                            }
+                        }, reject);
+                    };
+                    readEntries();
+                });
+            }
+
+            function fileSelectHandler(files) {
+                processFiles(Array.from(files));
+            }
+
+            function processFiles(files) {
+                const formData = new FormData();
+                for (let i = 0; i < files.length; i++) {
+                    formData.append("folderInput", files[i]);
+                }
+
+                fetch("/upload", {
+                    method: "POST",
+                    body: formData,
+                })
+                    .then((response) => response.text())
+                    .then((data) => console.log(data))
+                    .catch((error) => console.error("Error:", error));
+            }
+
+            function handleError(error) {
+                console.error("Error reading directory:", error);
+            }
+        </script>
     </body>
 </html>
